# bear5emu

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: Tests.yml
src/: bear5.c  bear5.h  main.cpp
src/configs/: configs.hpp  smb1.cpp
src/images/: bear5.h  images.h
src/raylib-libretro/: gui_window_file_dialog.c  gui_window_file_dialog.h  menu.h  raygui.c  raygui.h  raylib-libretro.c  raylib-libretro.h
